==> pdlsurya/STM32F401/Bootloader/CustomLib/SD_driver/SD_driver.c <==
#include <stdint.h>
#include "SD_driver.h"
#include "stm32f4xx_hal.h"
#define CMD0 0
#define CMD0_ARG 0x00000000
#define CMD0_CRC 0x94
#define CMD8 8
#define CMD8_ARG 0x000001AA
#define CMD8_CRC 0x86 //(1000011 << 1)
#define CMD9 9
#define CMD9_ARG 0x00000000
#define CMD9_CRC 0x00
#define CMD58 58
#define CMD58_ARG 0x00000000
#define CMD58_CRC 0x00
#define CMD55 55
#define CMD55_ARG 0x00000000
#define CMD55_CRC 0x00
#define ACMD41 41
#define ACMD41_ARG 0x40000000
#define ACMD41_CRC 0x00
#define CMD17 17
#define CMD17_CRC 0x95
#define SD_MAX_READ_ATTEMPTS 4500
#define CMD24 24
#define CMD24_CRC 0x00
#define SD_MAX_WRITE_ATTEMPTS 3907
#define CMD18 18
#define CMD18_CRC 0x00
#define CMD12 12
#define CMD12_ARG 0x00000000
#define CMD12_CRC 0x00
#define CMD25 25
#define CMD25_CRC 0x00
#define PARAM_ERROR(X) X & 0b01000000
#define ADDR_ERROR(X) X & 0b00100000
#define ERASE_SEQ_ERROR(X) X & 0b00010000
#define CRC_ERROR(X) X & 0b00001000
#define ILLEGAL_CMD(X) X & 0b00000100
#define ERASE_RESET(X) X & 0b00000010
#define IN_IDLE(X) X & 0b00000001
#define CMD_VER(X) ((X >> 4) & 0x0F)
#define VOL_ACC(X) (X & 0x1F)
#define VOLTAGE_ACC_27_33 0b00000001
#define VOLTAGE_ACC_LOW 0b00000010
#define VOLTAGE_ACC_RES1 0b00000100
#define VOLTAGE_ACC_RES2 0b00001000
#define POWER_UP_STATUS(X) X & 0x80
#define CCS_VAL(X) X & 0x40
#define VDD_2728(X) X & 0b10000000
#define VDD_2829(X) X & 0b00000001
#define VDD_2930(X) X & 0b00000010
#define VDD_3031(X) X & 0b00000100

static inline uint8_t SPI_transfer(uint8_t tx_Byte) {
	uint8_t rx_Byte;
	HAL_SPI_TransmitReceive(&hspi1, &tx_Byte, &rx_Byte, 1, HAL_MAX_DELAY);
	while (hspi1.State == HAL_SPI_STATE_BUSY)
		;  // wait xmission complete
	return rx_Byte;
}

void SD_powerUpSeq() {
	// make sure card is deselected
	CS_DISABLE();

	// give SD card time to power up
	HAL_Delay(1);

	// send 80 clock cycles to synchronize
	for (uint8_t i = 0; i < 20; i++)
		SPI_transfer(0xFF);

	// deselect SD card
	CS_DISABLE();
	SPI_transfer(0xFF);
}

uint8_t SD_init() {
	GPIO_InitTypeDef GPIO_InitStruct = { 0 };
	MX_SPI1_Init();

	/*Configure GPIO pin : PA4 for Chip Select*/
	GPIO_InitStruct.Pin = GPIO_PIN_4;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
	HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

	uint8_t res[5], cmdAttempts = 0;

	SD_powerUpSeq();

	// command card to idle
	while ((res[0] = SD_goIdleState()) != 0x01) {
		cmdAttempts++;
		if (cmdAttempts > 50) {
			if (res[0] == 0)
				//USB_SerialPrint("Card Not Found!\r\n");

			// SD_printR1(res[0]);
			return SD_INIT_ERROR;
		}
	}

	// send interface conditions
	SD_sendIfCond(res);
	if (res[0] != 0x01) {
		// SD_printR1(res[0]);
		return SD_INIT_ERROR;
	}

	// check echo pattern
	if (res[4] != 0xAA) {
		// SD_printR7(res);
		return SD_INIT_ERROR;
	}

	// attempt to initialize card
	cmdAttempts = 0;
	do {
		if (cmdAttempts > 100)
			return SD_INIT_ERROR;

		// send app cmd
		res[0] = SD_sendApp();

		// if no error in response
		if (res[0] < 2) {
			res[0] = SD_sendOpCond();
		}

		// wait
		HAL_Delay(10);

		cmdAttempts++;
	} while (res[0] != SD_READY);

	// read OCR
	SD_readOCR(res);
	// check card is ready
	if (!(res[1] & 0x80)) {
		// SD_printR3(res);
		return SD_INIT_ERROR;
	} else {
		//if (res[1] & 0x40)
			//USB_SerialPrint("Card Type: SDHC\r\n");
	}
	return SD_INIT_SUCCESS;
}
