==> pdlsurya/nRF52/SD_driver/SD_driver.c <==
#include "nrf_drv_spi.h"
#include "app_util_platform.h"
#include "nrf_gpio.h"
#include "SD_driver.h"
#include "boards.h"
#include "nrf.h"
#include "nrf_delay.h"
#include "debug_log.h"
#define CS_PIN NRF_GPIO_PIN_MAP(0, 2)
#define MOSI_PIN NRF_GPIO_PIN_MAP(1, 13)
#define MISO_PIN NRF_GPIO_PIN_MAP(1, 10)
#define SCK_PIN NRF_GPIO_PIN_MAP(1, 15)
#define CMD0 0
#define CMD0_ARG 0x00000000
#define CMD0_CRC 0x94
#define CMD8 8
#define CMD8_ARG 0x000001AA
#define CMD8_CRC 0x86 //(1000011 << 1)
#define CMD9 9
#define CMD9_ARG 0x00000000
#define CMD9_CRC 0x00
#define CMD58 58
#define CMD58_ARG 0x00000000
#define CMD58_CRC 0x00
#define CMD55 55
#define CMD55_ARG 0x00000000
#define CMD55_CRC 0x00
#define ACMD41 41
#define ACMD41_ARG 0x40000000
#define ACMD41_CRC 0x00
#define CMD17 17
#define CMD17_CRC 0x95
#define SD_MAX_READ_ATTEMPTS 4500
#define CMD24 24
#define CMD24_CRC 0x00
#define SD_MAX_WRITE_ATTEMPTS 3907
#define CMD18 18
#define CMD18_CRC 0x00
#define CMD12 12
#define CMD12_ARG 0x00000000
#define CMD12_CRC 0x00
#define CMD25 25
#define CMD25_CRC 0x00
#define PARAM_ERROR(X) X & 0b01000000
#define ADDR_ERROR(X) X & 0b00100000
#define ERASE_SEQ_ERROR(X) X & 0b00010000
#define CRC_ERROR(X) X & 0b00001000
#define ILLEGAL_CMD(X) X & 0b00000100
#define ERASE_RESET(X) X & 0b00000010
#define IN_IDLE(X) X & 0b00000001
#define CMD_VER(X) ((X >> 4) & 0x0F)
#define VOL_ACC(X) (X & 0x1F)
#define VOLTAGE_ACC_27_33 0b00000001
#define VOLTAGE_ACC_LOW 0b00000010

uint8_t SPI_transfer(uint8_t tx_Byte)
{
    uint8_t rx_Byte;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, &tx_Byte, 1, &rx_Byte, 1));
    while (!spi_xfer_done);
    spi_xfer_done = false;

    return rx_Byte;
}

void SD_powerUpSeq()
{
    // make sure card is deselected
    CS_DISABLE();

    // give SD card time to power up
    nrf_delay_ms(1);

    // send 80 clock cycles to synchronize
    for (uint8_t i = 0; i < 20; i++)
        SPI_transfer(0xFF);

    // deselect SD card
    CS_DISABLE();
    SPI_transfer(0xFF);
}

uint8_t SD_init()
{
    //uint8_t csd_reg[16];
    nrf_drv_spi_config_t spi_config = NRF_DRV_SPI_DEFAULT_CONFIG;
    spi_config.ss_pin = (uint8_t)NRF_SPI_PIN_NOT_CONNECTED;
    spi_config.miso_pin = MISO_PIN;
    spi_config.mosi_pin = MOSI_PIN;
    spi_config.sck_pin = SCK_PIN;
    APP_ERROR_CHECK(nrf_drv_spi_init(&spi, &spi_config, spi_event_handler, NULL));

    nrf_gpio_cfg_output (CS_PIN);

    uint8_t res[5], cmdAttempts = 0;

    SD_powerUpSeq();

    // command card to idle
    while ((res[0] = SD_goIdleState()) != 0x01)
    {
        cmdAttempts++;
        if (cmdAttempts > 50)
        {
            if (res[0] == 0)
            {
                debug_log_print("Card Not Found!\r\n");
            }
            else
                // SD_printR1(res[0]);
                return SD_INIT_ERROR;
        }
    }

    // send interface conditions
    SD_sendIfCond(res);
    if (res[0] != 0x01)
    {
        // SD_printR1(res[0]);
        return SD_INIT_ERROR;
    }

    // check echo pattern
    if (res[4] != 0xAA)
    {
        // SD_printR7(res);
        return SD_INIT_ERROR;
    }

    // attempt to initialize card
    cmdAttempts = 0;
    do
    {
        if (cmdAttempts > 100)
            return SD_INIT_ERROR;

        // send app cmd
        res[0] = SD_sendApp();

        // if no error in response
        if (res[0] < 2)
        {
            res[0] = SD_sendOpCond();
        }

        // wait
        nrf_delay_ms(10);

        cmdAttempts++;
    } while (res[0] != SD_READY);

    // read OCR
    SD_readOCR(res);
    // check card is ready
    if (!(res[1] & 0x80))
    {
        // SD_printR3(res);
        return SD_INIT_ERROR;
    }
    else
    {
        if (res[1] & 0x40)
            debug_log_print("Card Type: SDHC\r\n");
    }
    return SD_INIT_SUCCESS;
}
